--- a/index(1).html
+++ b/index(1).html
@@ -299,14 +299,13 @@ print('teste')
     <script>
         // CONFIGURAÇÃO DO FIREBASE
         // IMPORTANTE: Substitua pela sua configuração do Firebase
-       const firebaseConfig = {
-  apiKey: VITE_FIREBASE_API_KEY="AIzaSyB7CbyTEkO9xGfxR14HR9ryPa55owlV06A",
-  authDomain: VITE_FIREBASE_AUTH_DOMAIN="persistencia-c262a.firebaseapp.com",
-  projectId: VITE_FIREBASE_PROJECT_ID="persistencia-c262a",
-  storageBucket: VITE_FIREBASE_STORAGE_BUCKET="persistencia-c262a.firebasestorage.app",
-  messagingSenderId: VITE_FIREBASE_MESSAGING_SENDER_ID="619691112411",
-  appId: VITE_FIREBASE_APP_ID="1:619691112411:web:053e94d4a6d87d64ae59fe",
-  measurementId: VITE_FIREBASE_MEASUREMENT_ID="G-GYQZV66Q3R"
+       const firebaseConfig = { 
+apiKey: FIREBASE_API_KEY, 
+authDomain: FIREBASE_AUTH_DOMAIN, 
+projectId: FIREBASE_PROJECT_ID, 
+storageBucket: FIREBASE_STORAGE_BUCKET, 
+messagingSenderId: FIREBASE_MESSAGING_SENDER_ID, 
+appId: FIREBASE_APP_ID
 };
 
         // Inicializar Firebase
@@ -470,4 +469,5 @@ print('teste')
         });
     </script>
 </body>
+
 </html>
