--- a/index.html
+++ b/index.html
@@ -299,25 +299,31 @@ print('teste')
     <script>
         // CONFIGURAÇÃO DO FIREBASE
         // IMPORTANTE: Substitua pela sua configuração do Firebase
-       const firebaseConfig = { 
-apiKey: FIREBASE_API_KEY, 
-authDomain: FIREBASE_AUTH_DOMAIN, 
-projectId: FIREBASE_PROJECT_ID, 
-storageBucket: FIREBASE_STORAGE_BUCKET, 
-messagingSenderId: FIREBASE_MESSAGING_SENDER_ID, 
-appId: FIREBASE_APP_ID
-};
+      // CONFIGURAÇÃO DO FIREBASE
+let db;
 
-        // Inicializar Firebase
-        let db;
-        try {
-            firebase.initializeApp(firebaseConfig);
-            db = firebase.firestore();
-            console.log('Firebase inicializado com sucesso');
-        } catch (error) {
-            console.error('Erro ao inicializar Firebase:', error);
-            showStatus('Erro: Configure o Firebase primeiro', 'error');
-        }
+async function initializeFirebase() {
+    try {
+        // Requisição para a API que criamos no Vercel
+        const response = await fetch('/api/firebaseConfig');
+        const firebaseConfig = await response.json();
+
+        // Inicializa o Firebase com as credenciais obtidas
+        firebase.initializeApp(firebaseConfig);
+
+        // Atribui a instância do Firestore à variável `db`
+        db = firebase.firestore();
+
+        console.log('Firebase e Firestore inicializados com sucesso!');
+
+    } catch (error) {
+        console.error('Erro na inicialização do Firebase:', error);
+        showStatus('Erro: Verifique a configuração no Vercel.', 'error');
+    }
+}
+
+// Chama a função de inicialização quando a página carrega
+initializeFirebase();
 
         // Inicializar o mapa
         const map = L.map('map').setView([-23.5505, -46.6333], 10); // São Paulo como centro inicial
@@ -371,25 +377,26 @@ appId: FIREBASE_APP_ID
         }
 
         // Função para salvar dados no Firebase
-        async function saveToFirebase(data) {
-            try {
-                if (!db) {
-                    throw new Error('Firebase não está configurado');
-                }
-                
-                const docRef = await db.collection('comments').add({
-                    ...data,
-                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
-                });
-                
-                console.log('Documento salvo com ID:', docRef.id);
-                return docRef.id;
-            } catch (error) {
-                console.error('Erro ao salvar no Firebase:', error);
-                throw error;
-            }
+async function saveToFirebase(data) {
+    try {
+        // Adicione esta verificação para garantir que o Firebase está pronto
+        if (!db) {
+            showStatus('Erro: Firebase não está configurado. Tente novamente mais tarde.', 'error');
+            throw new Error('Firebase não está configurado');
         }
 
+        const docRef = await db.collection('comments').add({
+            ...data,
+            timestamp: firebase.firestore.FieldValue.serverTimestamp()
+        });
+
+        console.log('Documento salvo com ID:', docRef.id);
+        return docRef.id;
+    } catch (error) {
+        console.error('Erro ao salvar no Firebase:', error);
+        throw error;
+    }
+}
         // Manipular envio do formulário
         document.getElementById('commentForm').addEventListener('submit', async function(e) {
             e.preventDefault();
@@ -471,4 +478,5 @@ appId: FIREBASE_APP_ID
 </body>
 
 </html>
+
 
