--- a/index.html
+++ b/index.html
@@ -336,164 +336,159 @@
     <script>
         // Base de dados dos brechós
         const brechosData = [
-            {
-                id: 1,
-                nome: "Brechó da Vila",
-                endereco: "Rua João Batista, 456 - Centro, Carapicuíba - SP",
-                bairro: "Centro",
-                latitude: -23.5225,
-                longitude: -46.8356,
-                telefone: "(11) 4164-5678",
-                whatsapp: "5511941645678",
-                site: "https://brechodavila.com.br",
-                horarios: "Seg-Sex: 9h-18h | Sáb: 9h-14h",
-                estrelas: 4.5,
-                avaliacoes: 127,
-                doacoes: "Aceita doações como troca",
-                precoMin: 10,
-                precoMax: 150,
-                tiposPecas: "Usadas e novas",
-                caracteristicas: ["doações", "troca", "roupa feminina", "roupa masculina"]
-            },
-            {
-                id: 2,
-                nome: "Recicla Moda",
-                endereco: "Av. Presidente Vargas, 890 - Vila Caldas, Carapicuíba - SP",
-                bairro: "Vila Caldas",
-                latitude: -23.5285,
-                longitude: -46.8425,
-                telefone: "(11) 4163-2345",
-                whatsapp: "5511941632345",
-                site: "https://reciclamoda.com.br",
-                horarios: "Seg-Sáb: 10h-19h",
-                estrelas: 4.8,
-                avaliacoes: 203,
-                doacoes: "Recebe doações sem troca",
-                precoMin: 15,
-                precoMax: 200,
-                tiposPecas: "Usadas e novas",
-                caracteristicas: ["doações", "roupa feminina", "acessórios", "bolsas"]
-            },
-            {
-                id: 3,
-                nome: "Brechó Solidário Esperança",
-                endereco: "Rua Maria Amélia, 123 - Cohab V, Carapicuíba - SP",
-                bairro: "Cohab V",
-                latitude: -23.5195,
-                longitude: -46.8298,
-                telefone: "(11) 4165-8901",
-                whatsapp: "5511941658901",
-                site: null,
-                horarios: "Ter-Sáb: 8h-17h",
-                estrelas: 4.3,
-                avaliacoes: 89,
-                doacoes: "Aceita doações como troca",
-                precoMin: 5,
-                precoMax: 80,
-                tiposPecas: "Apenas usadas",
-                caracteristicas: ["doações", "troca", "preço baixo", "solidário"]
-            },
-            {
-                id: 4,
-                nome: "Chic Brechó",
-                endereco: "Rua das Palmeiras, 234 - Parque Santa Teresa, Carapicuíba - SP",
-                bairro: "Parque Santa Teresa",
-                latitude: -23.5310,
-                longitude: -46.8380,
-                telefone: "(11) 4162-7890",
-                whatsapp: "5511941627890",
-                site: "https://chicbrecho.com.br",
-                horarios: "Seg-Sex: 10h-19h | Sáb: 10h-16h",
-                estrelas: 4.7,
-                avaliacoes: 156,
-                doacoes: "Recebe doações sem troca",
-                precoMin: 20,
-                precoMax: 300,
-                tiposPecas: "Usadas e novas",
-                caracteristicas: ["roupa feminina", "roupas de marca", "acessórios", "sapatos"]
-            },
-            {
-                id: 5,
-                nome: "Brechó da Tia Lu",
-                endereco: "Rua São José, 567 - Vila Dirce, Carapicuíba - SP",
-                bairro: "Vila Dirce",
-                latitude: -23.5265,
-                longitude: -46.8335,
-                telefone: "(11) 4164-3456",
-                whatsapp: "5511941643456",
-                site: null,
-                horarios: "Seg-Sáb: 9h-18h",
-                estrelas: 4.6,
-                avaliacoes: 134,
-                doacoes: "Aceita doações como troca",
-                precoMin: 10,
-                precoMax: 120,
-                tiposPecas: "Usadas e novas",
-                caracteristicas: ["doações", "troca", "roupa infantil", "roupa feminina"]
-            },
-            {
-                id: 6,
-                nome: "Sustenta Fashion",
-                endereco: "Av. Inocêncio Seráfico, 789 - Centro, Carapicuíba - SP",
-                bairro: "Centro",
-                latitude: -23.5240,
-                longitude: -46.8365,
-                telefone: "(11) 4163-4567",
-                whatsapp: "5511941634567",
-                site: "https://sustentafashion.com.br",
-                horarios: "Ter-Sex: 10h-18h | Sáb: 9h-15h",
-                estrelas: 4.4,
-                avaliacoes: 98,
-                doacoes: "Recebe doações sem troca",
-                precoMin: 15,
-                precoMax: 180,
-                tiposPecas: "Usadas e novas",
-                caracteristicas: ["sustentável", "roupa feminina", "roupa masculina", "acessórios"]
-            },
-			{
-                id: 7,
-                nome: "Brechó da Praça",
-                endereco: "Praça da Liberdade, 88",
-                cidade: "Carapicuíba",
-                bairro: "Jardim Ana Estela",
-                latitude: -23.5275,
-                longitude: -46.8395,
-                telefone: "(11) 4184-2468",
-                whatsapp: "5511941842468",
-                site: null,
-                horario: "Ter-Sáb: 10h-18h",
-                estrelas: 4.1,
-                avaliacoes: 67,
-                aceitaDoacoes: false,
-                aceitaTroca: false,
-                faixaPreco: "R$ 10 - R$ 60",
-                tiposPecas: "apenas usadas",
-                caracteristicas: ["usadas"],
-                feedback: "Preços justos e bom atendimento"
-            },
-			{
-                id: 8,
-                nome: "Brechó Estilo Único",
-                endereco: "Rua São João, 789",
-                cidade: "Carapicuíba",
-                bairro: "Jardim Veloso",
-                latitude: -23.5305,
-                longitude: -46.8286,
-                telefone: "(11) 4184-9012",
-                whatsapp: "5511941849012",
-                site: "https://estilounico.com.br",
-                horario: "Ter-Dom: 10h-20h",
-                estrelas: 4.3,
-                avaliacoes: 89,
-                aceitaDoacoes: false,
-                aceitaTroca: true,
-                faixaPreco: "R$ 20 - R$ 150",
-                tiposPecas: "usadas e novas",
-                caracteristicas: ["troca", "usadas", "novas"],
-                feedback: "Peças de marca a preços acessíveis"
-            },
-        ];
-
+           {
+            id: 1,
+            nome: "Brechó da Vila",
+            endereco: "Rua João Batista, 456 - Centro, Carapicuíba - SP",
+            bairro: "Centro",
+            latitude: -23.5225,
+            longitude: -46.8356,
+            telefone: "(11) 4164-5678",
+            whatsapp: "5511941645678",
+            site: "https://brechodavila.com.br",
+            horarios: "Seg-Sex: 9h-18h | Sáb: 9h-14h",
+            estrelas: 4.5,
+            avaliacoes: 127,
+            doacoes: "Aceita doações como troca", // CHAVE USADA NO CARD
+            precoMin: 10,
+            precoMax: 150,
+            tiposPecas: "Usadas e novas",
+            caracteristicas: ["doações", "troca", "roupa feminina", "roupa masculina"]
+        },
+        {
+            id: 2,
+            nome: "Recicla Moda",
+            endereco: "Av. Presidente Vargas, 890 - Vila Caldas, Carapicuíba - SP",
+            bairro: "Vila Caldas",
+            latitude: -23.5285,
+            longitude: -46.8425,
+            telefone: "(11) 4163-2345",
+            whatsapp: "5511941632345",
+            site: "https://reciclamoda.com.br",
+            horarios: "Seg-Sáb: 10h-19h",
+            estrelas: 4.8,
+            avaliacoes: 203,
+            doacoes: "Recebe doações sem troca", // CHAVE USADA NO CARD
+            precoMin: 15,
+            precoMax: 200,
+            tiposPecas: "Usadas e novas",
+            caracteristicas: ["doações", "roupa feminina", "acessórios", "bolsas"]
+        },
+        {
+            id: 3,
+            nome: "Brechó Solidário Esperança",
+            endereco: "Rua Maria Amélia, 123 - Cohab V, Carapicuíba - SP",
+            bairro: "Cohab V",
+            latitude: -23.5195,
+            longitude: -46.8298,
+            telefone: "(11) 4165-8901",
+            whatsapp: "5511941658901",
+            site: null,
+            horarios: "Ter-Sáb: 8h-17h",
+            estrelas: 4.3,
+            avaliacoes: 89,
+            doacoes: "Aceita doações como troca", // CHAVE USADA NO CARD
+            precoMin: 5,
+            precoMax: 80,
+            tiposPecas: "Apenas usadas",
+            caracteristicas: ["doações", "troca", "preço baixo", "solidário"]
+        },
+        {
+            id: 4,
+            nome: "Chic Brechó",
+            endereco: "Rua das Palmeiras, 234 - Parque Santa Teresa, Carapicuíba - SP",
+            bairro: "Parque Santa Teresa",
+            latitude: -23.5310,
+            longitude: -46.8380,
+            telefone: "(11) 4162-7890",
+            whatsapp: "5511941627890",
+            site: "https://chicbrecho.com.br",
+            horarios: "Seg-Sex: 10h-19h | Sáb: 10h-16h",
+            estrelas: 4.7,
+            avaliacoes: 156,
+            doacoes: "Recebe doações sem troca", // CHAVE USADA NO CARD
+            precoMin: 20,
+            precoMax: 300,
+            tiposPecas: "Usadas e novas",
+            caracteristicas: ["roupa feminina", "roupas de marca", "acessórios", "sapatos"]
+        },
+        {
+            id: 5,
+            nome: "Brechó da Tia Lu",
+            endereco: "Rua São José, 567 - Vila Dirce, Carapicuíba - SP",
+            bairro: "Vila Dirce",
+            latitude: -23.5265,
+            longitude: -46.8335,
+            telefone: "(11) 4164-3456",
+            whatsapp: "5511941643456",
+            site: null,
+            horarios: "Seg-Sáb: 9h-18h",
+            estrelas: 4.6,
+            avaliacoes: 134,
+            doacoes: "Aceita doações como troca", // CHAVE USADA NO CARD
+            precoMin: 10,
+            precoMax: 120,
+            tiposPecas: "Usadas e novas",
+            caracteristicas: ["doações", "troca", "roupa infantil", "roupa feminina"]
+        },
+        {
+            id: 6,
+            nome: "Sustenta Fashion",
+            endereco: "Av. Inocêncio Seráfico, 789 - Centro, Carapicuíba - SP",
+            bairro: "Centro",
+            latitude: -23.5240,
+            longitude: -46.8365,
+            telefone: "(11) 4163-4567",
+            whatsapp: "5511941634567",
+            site: "https://sustentafashion.com.br",
+            horarios: "Ter-Sex: 10h-18h | Sáb: 9h-15h",
+            estrelas: 4.4,
+            avaliacoes: 98,
+            doacoes: "Recebe doações sem troca", // CHAVE USADA NO CARD
+            precoMin: 15,
+            precoMax: 180,
+            tiposPecas: "Usadas e novas",
+            caracteristicas: ["sustentável", "roupa feminina", "roupa masculina", "acessórios"]
+        },
+        {
+            id: 7,
+            nome: "Brechó da Praça",
+            endereco: "Praça da Liberdade, 88 - Jardim Ana Estela, Carapicuíba - SP",
+            bairro: "Jardim Ana Estela",
+            latitude: -23.5275,
+            longitude: -46.8395,
+            telefone: "(11) 4184-2468",
+            whatsapp: "5511941842468",
+            site: null,
+            horarios: "Ter-Sáb: 10h-18h", // CORRIGIDO: usando 'horarios'
+            estrelas: 4.1,
+            avaliacoes: 67,
+            precoMin: 10, // CORRIGIDO: usando 'precoMin'
+            precoMax: 60, // CORRIGIDO: usando 'precoMax'
+            doacoes: "Não aceita doações ou troca", // CORRIGIDO: usando 'doacoes'
+            tiposPecas: "Apenas usadas",
+            caracteristicas: ["usadas", "preço justo"] // Alterei para corresponder ao feedback
+        },
+        {
+            id: 8,
+            nome: "Brechó Estilo Único",
+            endereco: "Rua São João, 789 - Jardim Veloso, Carapicuíba - SP",
+            bairro: "Jardim Veloso",
+            latitude: -23.5305,
+            longitude: -46.8286,
+            telefone: "(11) 4184-9012",
+            whatsapp: "5511941849012",
+            site: "https://estilounico.com.br",
+            horarios: "Ter-Dom: 10h-20h", // CORRIGIDO: usando 'horarios'
+            estrelas: 4.3,
+            avaliacoes: 89,
+            precoMin: 20, // CORRIGIDO: usando 'precoMin'
+            precoMax: 150, // CORRIGIDO: usando 'precoMax'
+            doacoes: "Aceita troca, não aceita doações", // CORRIGIDO: usando 'doacoes'
+            tiposPecas: "Usadas e novas",
+            caracteristicas: ["troca", "usadas", "novas", "peças de marca"] // Alterei para corresponder ao feedback
+        },
+    ];
         // Inicializar o mapa
         const map = L.map('map').setView([-23.5225, -46.8356], 13);
 
@@ -650,5 +645,6 @@
     </script>
 </body>
 </html>
+
 
 
